tests/snapshots/cow_types-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
cow_str=owned%20cow&
owned_string=always%20owned&
cow_vec%5B0%5D=first&
cow_vec%5B1%5D=second
