tests/snapshots/cow_types@form.snap
---
source: tests/test_roundtrip.rs
description: "WithCow { cow_str: \"owned cow\", owned_string: \"always owned\", cow_vec: [\"first\", \"second\"] }"
---
cow_str=owned%20cow&
owned_string=always%20owned&
cow_vec%5B0%5D=first&
cow_vec%5B1%5D=second
