tests/snapshots/default_fields.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
default_string=custom&
default_number=100&
default_vec[0]=a&
default_vec[1]=b&
normal_field=required
