tests/snapshots/default_fields@form.snap
---
source: tests/test_roundtrip.rs
description: "WithDefaults { default_string: \"custom\", default_number: 100, default_vec: [\"a\", \"b\"], normal_field: \"required\" }"
---
default_string=custom&
default_number=100&
default_vec%5B0%5D=a&
default_vec%5B1%5D=b&
normal_field=required
