tests/snapshots/edge_case_primitives-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
empty_string=&
zero_int=0&
zero_float=0.0&
false_bool=false&
space_string=%20%20%20&
special_chars=%21%40%23%24%25%5E%26*%28%29_%2B-%3D%5B%5D%7B%7D%7C%3B%27%3A%2C.%3C%3E%3F%2F%7E%60
